updated dm api and store key rfinished
